namespace OrdrMate.DTOs;

public class KitchenDto
{
    public string Id { get; set; } = string.Empty;
    public string Name { get; set; } = string.Empty;
    public string Description { get; set; } = string.Empty;
    public string RestaurantId { get; set; } = string.Empty;
}